--- a/signup.html
+++ b/signup.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - Kabale Online</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="display: flex; align-items: center; justify-content: center; min-height: 100vh; padding: 1rem;">
-    <main style="width: 100%; max-width: 400px; padding: 2rem; background-color: var(--bg-white); border-radius: var(--border-radius-lg); box-shadow: var(--shadow-lg);" class="fade-in">
-        <div style="text-align: center; margin-bottom: 2rem;">
-            <a href="index.html" class="site-title">Kabale <span>Online</span></a>
-            <h1 style="font-size: 1.75rem; font-weight: 700; margin-top: 1rem;">Create Your Account</h1>
+<body style="display: flex; align-items: center; justify-content: center; min-height: 100vh; padding: 1rem; background: var(--bg-color);">
+    <main style="width: 100%; max-width: 420px; background-color: var(--card-bg); border-radius: var(--border-radius); box-shadow: var(--shadow-lg);" class="animate-on-load">
+        <div style="padding: 2.5rem 2rem;">
+            <div style="text-align: center; margin-bottom: 2rem;">
+                <a href="index.html" class="site-title">Kabale <span>Online</span></a>
+                <h1 style="font-size: 1.75rem; font-weight: 700; margin-top: 1rem;">Create Your Account</h1>
+            </div>
+            <form id="signup-form">
+                <div class="form-group">
+                    <input type="text" id="signup-name" placeholder="Full Name" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" id="signup-email" placeholder="Email Address" required>
+                </div>
+                <div class="form-group">
+                    <input type="password" id="signup-password" placeholder="Password (min. 6 characters)" required>
+                </div>
+                <p id="error-message" style="color: var(--error-color); text-align: center; margin-bottom: 1rem; display: none;"></p>
+                <button type="submit" class="btn btn-primary">Create Account</button>
+            </form>
+            <p style="text-align: center; color: var(--text-light); margin-top: 1.5rem;">Already have an account? <a href="login.html" style="font-weight: bold;">Login</a></p>
         </div>
-        <form id="signup-form">
-            <div class="form-group">
-                <input type="text" id="signup-name" placeholder="Full Name" required>
-            </div>
-            <div class="form-group">
-                <input type="email" id="signup-email" placeholder="Email Address" required>
-            </div>
-            <div class="form-group">
-                <input type="password" id="signup-password" placeholder="Password (min. 6 characters)" required>
-            </div>
-            <p id="error-message" style="color: var(--error-color); text-align: center; margin-bottom: 1rem; display: none;"></p>
-            <button type="submit" class="btn btn-primary w-full">Create Account</button>
-        </form>
-        <p style="text-align: center; color: var(--text-muted); margin-top: 1.5rem;">Already have an account? <a href="login.html">Login</a></p>
     </main>
     <script type="module" src="js/auth.js"></script>
 </body>
