--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
                 <div class="form-group">
                     <input type="password" id="login-password" placeholder="Password" required>
                 </div>
-                <p id="error-message" style="color: var(--error-color); text-align: center; margin-bottom: 1rem; display: none;"></p>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <p id="error-message" style="color: red; text-align: center; margin-bottom: 1rem; display: none;"></p>
+                <button type="submit" id="login-btn" class="btn btn-primary">Login</button>
             </form>
             <p style="text-align: center; color: var(--text-light); margin-top: 1.5rem;">Don't have an account? <a href="signup.html" style="font-weight: bold;">Sign Up</a></p>
         </div>
