--- a/login.html
+++ b/login.html
@@ -4,27 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Kabale Online</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="display: flex; align-items: center; justify-content: center; min-height: 100vh; padding: 1rem; background: var(--bg-color);">
-    <main style="width: 100%; max-width: 420px; background-color: var(--card-bg); border-radius: var(--border-radius); box-shadow: var(--shadow-lg);" class="animate-on-load">
-        <div style="padding: 2.5rem 2rem;">
-            <div style="text-align: center; margin-bottom: 2rem;">
-                <a href="index.html" class="site-title">Kabale <span>Online</span></a>
-                <h1 style="font-size: 1.75rem; font-weight: 700; margin-top: 1rem;">Welcome Back!</h1>
-            </div>
-            <form id="login-form">
-                <div class="form-group">
-                    <input type="email" id="login-email" placeholder="Email Address" required>
-                </div>
-                <div class="form-group">
-                    <input type="password" id="login-password" placeholder="Password" required>
-                </div>
-                <p id="error-message" style="color: red; text-align: center; margin-bottom: 1rem; display: none;"></p>
-                <button type="submit" id="login-btn" class="btn btn-primary">Login</button>
-            </form>
-            <p style="text-align: center; color: var(--text-light); margin-top: 1.5rem;">Don't have an account? <a href="signup.html" style="font-weight: bold;">Sign Up</a></p>
+<body style="display: flex; align-items: center; justify-content: center; min-height: 100vh;">
+    <main style="width: 100%; max-width: 420px;" class="dashboard-card">
+        <div style="text-align: center; margin-bottom: 2rem;">
+            <a href="index.html" class="site-title">Kabale <span>Online</span></a>
+            <h1 style="font-size: 1.75rem; margin-top: 1rem;">Welcome Back!</h1>
         </div>
+        <form id="login-form">
+            <div class="form-group">
+                <input type="email" id="login-email" placeholder="Email Address" required>
+            </div>
+            <div class="form-group">
+                <input type="password" id="login-password" placeholder="Password" required>
+            </div>
+            <p id="error-message" style="color: red; text-align: center; margin-bottom: 1rem; display: none;"></p>
+            <button type="submit" id="login-btn" class="btn btn-primary">Login</button>
+        </form>
+        <p style="text-align: center; color: var(--text-light); margin-top: 1.5rem;">Don't have an account? <a href="signup.html" style="font-weight: bold;">Sign Up</a></p>
     </main>
     <script type="module" src="js/auth.js"></script>
 </body>
