--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <main class="page-container container">
         <section style="text-align: center; padding: 3rem 0;">
              <h1 style="font-size: clamp(2.5rem, 6vw, 4rem); margin-bottom: 1.5rem;">Professional Services <br>for a <span style="color: var(--primary-color);">Vibrant Kabale</span></h1>
-             <a href="browse.html" class="cta-button message-btn" style="padding: 14px 28px; font-size: 1.1rem; display: inline-block; width: auto;">Browse All Services</a>
+             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
+                <a href="browse.html" class="cta-button message-btn" style="padding: 14px 28px; font-size: 1.1rem;">Browse All Services</a>
+                <a href="dashboard.html" class="cta-button profile-btn" style="padding: 14px 28px; font-size: 1.1rem;">Post Your Service</a>
+            </div>
         </section>
 
         <section>
