--- a/service.html
+++ b/service.html
@@ -35,7 +35,11 @@
     </nav>
 
     <main class="container page-container">
-        <div id="service-detail-content"><div class="loading-spinner"><div class="spinner"></div></div></div>
+        <div id="service-detail-content">
+            <div class="loading-spinner">
+                <div class="spinner"></div>
+            </div>
+        </div>
     </main>
 
     <footer>
