--- a/dashboard.html
+++ b/dashboard.html
@@ -5,102 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Kabale Online</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <!-- Link to the main stylesheet for header, footer, etc. -->
     <link rel="stylesheet" href="css/style.css">
     
-    <!-- === EMBEDDED CSS FOR DASHBOARD - AS REQUESTED === -->
     <style>
-        .dashboard-grid {
-            display: grid;
-            grid-template-columns: 1fr; /* Mobile: single column */
-            gap: 2rem;
-        }
-        @media (min-width: 992px) {
-            .dashboard-grid {
-                grid-template-columns: 2fr 1fr; /* Desktop: two columns */
-            }
-        }
-        .dashboard-card {
-            background-color: var(--card-bg);
-            padding: 2rem;
-            border-radius: var(--border-radius);
-            box-shadow: var(--shadow);
-        }
-        .dashboard-card h2 {
-            font-size: 1.5rem;
-            padding-bottom: 1rem;
-            border-bottom: 2px solid var(--primary-color);
-            margin-bottom: 1.5rem;
-        }
-        .service-list-item {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            padding: 1rem;
-            background-color: var(--bg-color);
-            border-radius: 8px;
-            margin-bottom: 1rem;
-        }
-        .service-list-item img {
-            width: 60px;
-            height: 60px;
-            object-fit: cover;
-            border-radius: 8px;
-            flex-shrink: 0;
-        }
-        .service-list-item-info {
-            flex-grow: 1;
-            overflow: hidden;
-        }
-        .service-list-item-info p {
-            margin: 0;
-            font-weight: 600;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-        .service-list-item-actions {
-            display: flex;
-            gap: 0.5rem;
-            flex-shrink: 0;
-        }
-        .action-btn {
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 1.1rem;
-            padding: 0.5rem;
-            color: var(--text-light);
-            transition: all 0.2s ease;
-        }
+        .dashboard-hero { background: linear-gradient(135deg, var(--primary-color), #0056b3); color: white; padding: 2.5rem 2rem; border-radius: var(--border-radius); margin-bottom: 2rem; box-shadow: var(--shadow-lg); }
+        .dashboard-hero h1 { margin: 0; font-size: 2rem; }
+        .dashboard-hero p { margin: 0.5rem 0 1.5rem; opacity: 0.9; }
+        .dashboard-grid { display: grid; grid-template-columns: 1fr; gap: 2rem; }
+        @media (min-width: 992px) { .dashboard-grid { grid-template-columns: 2fr 1fr; } }
+        .dashboard-card { background-color: var(--card-bg); padding: 2rem; border-radius: var(--border-radius); box-shadow: var(--shadow); }
+        .dashboard-card h2 { font-size: 1.5rem; padding-bottom: 1rem; border-bottom: 2px solid var(--primary-color); margin-bottom: 1.5rem; }
+        .service-list-item { display: flex; align-items: center; gap: 1rem; padding: 1rem; background-color: var(--bg-color); border-radius: 8px; margin-bottom: 1rem; }
+        .service-list-item img { width: 60px; height: 60px; object-fit: cover; border-radius: 8px; flex-shrink: 0; }
+        .service-list-item-info { flex-grow: 1; overflow: hidden; }
+        .service-list-item-info p { margin: 0; font-weight: 600; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .service-list-item-actions { display: flex; gap: 0.5rem; flex-shrink: 0; }
+        .action-btn { background: none; border: none; cursor: pointer; font-size: 1.1rem; padding: 0.5rem; color: var(--text-light); transition: all 0.2s ease; }
         .action-btn.edit:hover { color: var(--primary-color); transform: scale(1.2); }
         .action-btn.delete:hover { color: var(--error-color); transform: scale(1.2); }
-        .profile-photo-square {
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            border-radius: var(--border-radius);
-            border: 4px solid white;
-            box-shadow: var(--shadow-lg);
-        }
-        .account-card-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0.5rem 0;
-        }
+        .profile-photo-square { width: 100px; height: 100px; object-fit: cover; border-radius: var(--border-radius); border: 4px solid white; box-shadow: var(--shadow-lg); }
+        .account-card-item { display: flex; justify-content: space-between; align-items: center; padding: 0.5rem 0; }
         .account-card-item span:first-child { font-weight: 600; color: var(--text-light); }
         .account-card-item span.plan { font-weight: bold; text-transform: capitalize; color: var(--primary-color); }
-        #logout-btn {
-            margin-top: 1rem;
-            border: 2px solid var(--error-color);
-            color: var(--error-color);
-            background-color: transparent;
-        }
-        #logout-btn:hover {
-             background-color: var(--error-color);
-             color: white;
-        }
+        #logout-btn { margin-top: 1rem; border: 2px solid var(--error-color); color: var(--error-color); background-color: transparent; }
+        #logout-btn:hover { background-color: var(--error-color); color: white; }
+        #edit-profile-form { display: none; }
     </style>
 </head>
 <body>
@@ -112,13 +41,31 @@
         <div class="loading-spinner"><div class="spinner"></div></div>
     </main>
 
+    <div id="add-service-modal" class="modal">
+        <div class="modal-content">
+            <h2 style="font-size: 1.5rem;">Add a New Service</h2>
+            <form id="add-service-form">
+                <div class="form-group"><label for="service-title">Title</label><input type="text" id="service-title" required></div>
+                <div class="form-group"><label for="service-price">Price (UGX)</label><input type="number" id="service-price" placeholder="e.g., 50000" required></div>
+                <div class="form-group"><label for="service-whatsapp">WhatsApp Number</label><input type="tel" id="service-whatsapp" placeholder="e.g., 0771234567" required></div>
+                <div class="form-group"><label for="service-desc">Description</label><textarea id="service-desc" required></textarea></div>
+                <div class="form-group"><label for="service-image-file">Service Image</label><input type="file" id="service-image-file" accept="image/*" required></div>
+                <div style="display: flex; gap: 1rem; margin-top: 1.5rem;">
+                    <button type="submit" class="btn btn-primary">Add Service</button>
+                    <button type="button" class="btn btn-secondary" id="cancel-add-btn">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <div id="edit-service-modal" class="modal">
         <div class="modal-content">
             <h2 style="font-size: 1.5rem;">Edit Service</h2>
             <form id="edit-service-form">
                 <input type="hidden" id="edit-service-id">
                 <div class="form-group"><label for="edit-service-title">Title</label><input type="text" id="edit-service-title" required></div>
-                <div class="form-group"><label for="edit-service-price">Price (UGX)</label><input type="number" id="edit-service-price" placeholder="e.g., 50000" required></div>
+                <div class="form-group"><label for="edit-service-price">Price (UGX)</label><input type="number" id="edit-service-price" required></div>
+                <div class="form-group"><label for="edit-service-whatsapp">WhatsApp Number</label><input type="tel" id="edit-service-whatsapp" required></div>
                 <div class="form-group"><label for="edit-service-desc">Description</label><textarea id="edit-service-desc" required></textarea></div>
                 <div class="form-group"><label for="edit-service-image">Update Image (optional)</label><input type="file" id="edit-service-image" accept="image/*"></div>
                 <div style="display: flex; gap: 1rem; margin-top: 1.5rem;">
@@ -146,7 +93,7 @@
             <p class="footer-copyright">&copy; 2025 Kabale Online. All Rights Reserved.</p>
         </div>
     </footer>
-    <script type="module" src="js/dashboard.js"></script>
+    <script type="module" src="js/admin.js"></script>
     <script>
         document.querySelector('.hamburger-menu').addEventListener('click', () => {
             document.querySelector('.mobile-nav').classList.toggle('active');
