--- a/dashboard.html
+++ b/dashboard.html
@@ -95,8 +95,8 @@
         .service-list-item-info p { margin: 0; font-weight: 600; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         .service-list-item-actions { display: flex; gap: 0.5rem; flex-shrink: 0; }
         .action-btn { background: none; border: none; cursor: pointer; font-size: 1.1rem; padding: 0.5rem; color: var(--text-light); transition: all 0.2s ease; }
-        .action-btn.edit:hover { color: var(--primary-color); }
-        .action-btn.delete:hover { color: var(--error-color); }
+        .action-btn.edit:hover { color: var(--primary-color); transform: scale(1.2); }
+        .action-btn.delete:hover { color: var(--error-color); transform: scale(1.2); }
         .profile-photo-square { width: 100px; height: 100px; object-fit: cover; border-radius: var(--border-radius); border: 4px solid white; box-shadow: var(--shadow-lg); }
         .account-card-item { display: flex; justify-content: space-between; align-items: center; padding: 0.5rem 0; }
         .account-card-item span:first-child { font-weight: 600; color: var(--text-light); }
