--- a/dashboard.html
+++ b/dashboard.html
@@ -80,7 +80,7 @@
         .footer-links { margin-bottom: 25px; }
         .footer-links a { color: #bdc3c7; margin: 0 10px; font-size: 0.9em; }
         .footer-copyright { font-size: 0.8em; color: var(--text-light); }
-        
+
         /* --- PROFESSIONAL DASHBOARD STYLES --- */
         .dashboard-hero { background: linear-gradient(135deg, var(--primary-color), #0056b3); color: white; padding: 2.5rem 2rem; border-radius: var(--border-radius); margin-bottom: 2rem; box-shadow: var(--shadow-lg); }
         .dashboard-hero h1 { margin: 0; font-size: 2rem; }
@@ -118,6 +118,39 @@
         .form-group input, .form-group textarea { width: 100%; padding: 14px 16px; font-size: 1rem; border: 2px solid var(--border-color); border-radius: var(--border-radius); box-sizing: border-box; }
         .loading-spinner { display: flex; justify-content: center; padding: 4rem; }
         .spinner { width: 50px; height: 50px; border: 5px solid var(--border-color); border-top-color: var(--primary-color); border-radius: 50%; animation: spin 1s linear infinite; }
+
+        /* === RESPONSIVE FIXES === */
+        * {
+          max-width: 100%;
+          box-sizing: border-box;
+        }
+
+        img {
+          max-width: 100%;
+          height: auto;
+          display: block;
+        }
+
+        .service-list-item-info p {
+          white-space: normal;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+
+        .service-list-item-actions {
+          flex-wrap: wrap;
+        }
+
+        .dashboard-card {
+          width: 100%;
+          max-width: 100%;
+        }
+
+        .modal-content {
+          max-width: 95vw;
+          width: 100%;
+        }
+    
     </style>
 </head>
 <body>
