--- a/dashboard.html
+++ b/dashboard.html
@@ -7,149 +7,158 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <!-- === ALL CSS IS NOW EMBEDDED IN THIS FILE - AS REQUESTED === -->
-    <style>
-        /* --- CORE VARIABLES & BASE STYLES --- */
-        :root {
-            --primary-color: #007bff;
-            --accent-color: #ffc107;
-            --bg-color: #f4f7f6;
-            --card-bg: #ffffff;
-            --text-dark: #34495e;
-            --text-light: #7f8c8d;
-            --border-color: #e9ecef;
-            --error-color: #dc3545;
-            --font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            --border-radius: 12px;
-            --shadow: 0 4px 15px rgba(0,0,0,0.07);
-            --shadow-lg: 0 10px 30px rgba(0, 123, 255, 0.15);
-        }
-        html, body {
-            overflow-x: hidden; /* Prevents horizontal scrolling */
-        }
-        body {
-            font-family: var(--font-family);
-            margin: 0;
-            background-color: var(--bg-color);
-            color: var(--text-dark);
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 15px;
-            box-sizing: border-box;
-        }
-        .page-container {
-            padding-top: 80px;
-            padding-bottom: 40px;
-        }
-        h1, h2, h3, h4 {
-            font-weight: 800;
-            margin: 0 0 1.5rem 0;
-        }
-        a {
-            color: var(--primary-color);
-            text-decoration: none;
-        }
+<style>
+    /* --- CORE VARIABLES & BASE STYLES --- */
+    :root {
+        --primary-color: #007bff;
+        --accent-color: #ffc107;
+        --bg-color: #f4f7f6;
+        --card-bg: #ffffff;
+        --text-dark: #34495e;
+        --text-light: #7f8c8d;
+        --border-color: #e9ecef;
+        --error-color: #dc3545;
+        --font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        --border-radius: 12px;
+        --shadow: 0 4px 15px rgba(0,0,0,0.07);
+        --shadow-lg: 0 10px 30px rgba(0, 123, 255, 0.15);
+    }
 
-        /* --- UNIFIED HEADER --- */
-        .sticky-header { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background-color: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); box-shadow: 0 2px 5px rgba(0,0,0,0.08); }
-        .header-top-bar { display: flex; align-items: center; padding: 0 15px; height: 55px; max-width: 1200px; margin: 0 auto; }
-        .hamburger-menu { font-size: 22px; background: none; border: none; cursor: pointer; color: var(--text-dark); padding-right: 15px; }
-        .site-title { text-decoration: none; color: var(--text-dark); font-size: 1.4em; font-weight: bold; }
-        .site-title span { color: var(--accent-color); }
-        .header-spacer { flex-grow: 1; }
-        .header-icons { display: flex; align-items: center; gap: 18px; }
-        .mobile-nav { position: fixed; top: 0; left: -280px; width: 280px; height: 100%; background-color: #fff; z-index: 1100; transition: left 0.4s ease; display: flex; flex-direction: column; }
-        .mobile-nav.active { left: 0; }
-        .mobile-nav-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.6); z-index: 1090; opacity: 0; visibility: hidden; }
-        .mobile-nav-overlay.active { opacity: 1; visibility: visible; }
-        .mobile-nav-header { padding: 15px 20px; border-bottom: 1px solid var(--border-color); font-size: 1.2em; font-weight: bold; }
-        .mobile-nav-links { flex-grow: 1; overflow-y: auto; }
-        .mobile-nav a { display: flex; align-items: center; padding: 16px 20px; color: var(--text-dark); text-decoration: none; border-bottom: 1px solid #f0f0f0; }
-        .mobile-nav a i { margin-right: 15px; font-size: 18px; color: var(--primary-color); width: 20px; text-align: center; }
-        .mobile-nav-footer { padding: 15px; background-color: #f4f7f6; }
-        .mobile-nav .post-button { background-color: #6c757d; color: white; font-weight: bold; border-radius: 25px; text-align: center; display: block; padding: 12px; margin: 10px; text-decoration: none; }
+    html, body {
+        overflow-x: hidden; /* Prevent horizontal scrolling */
+        overflow-y: auto;   /* Allow vertical scrolling when content exceeds screen */
+        height: 100%;
+    }
 
-        /* --- UNIFIED FOOTER --- */
-        footer { background-color: var(--text-dark); color: white; padding: 40px 15px 20px; text-align: center; margin-top: 30px; }
-        .footer-logo { font-size: 1.8em; font-weight: bold; margin-bottom: 10px; }
-        .footer-logo span { color: var(--accent-color); }
-        .footer-tagline { color: var(--text-light); font-size: 0.95em; margin-bottom: 25px; }
-        .footer-socials { margin-bottom: 25px; }
-        .footer-socials a { color: white; font-size: 22px; margin: 0 12px; }
-        .footer-links { margin-bottom: 25px; }
-        .footer-links a { color: #bdc3c7; margin: 0 10px; font-size: 0.9em; }
-        .footer-copyright { font-size: 0.8em; color: var(--text-light); }
+    body {
+        font-family: var(--font-family);
+        margin: 0;
+        background-color: var(--bg-color);
+        color: var(--text-dark);
+    }
 
-        /* --- PROFESSIONAL DASHBOARD STYLES --- */
-        .dashboard-hero { background: linear-gradient(135deg, var(--primary-color), #0056b3); color: white; padding: 2.5rem 2rem; border-radius: var(--border-radius); margin-bottom: 2rem; box-shadow: var(--shadow-lg); }
-        .dashboard-hero h1 { margin: 0; font-size: 2rem; }
-        .dashboard-hero p { margin: 0.5rem 0 1.5rem; opacity: 0.9; }
-        .dashboard-grid { display: grid; grid-template-columns: 1fr; gap: 2rem; }
-        @media (min-width: 992px) { .dashboard-grid { grid-template-columns: minmax(0, 2fr) minmax(0, 1fr); } }
-        .dashboard-card { background-color: var(--card-bg); padding: 2rem; border-radius: var(--border-radius); box-shadow: var(--shadow); }
-        .dashboard-card h2 { font-size: 1.5rem; padding-bottom: 1rem; border-bottom: 2px solid var(--primary-color); margin-bottom: 1.5rem; }
-        .service-list-item { display: flex; align-items: center; gap: 1rem; padding: 1rem; background-color: var(--bg-color); border-radius: 8px; margin-bottom: 1rem; }
-        .service-list-item img { width: 60px; height: 60px; object-fit: cover; border-radius: 8px; flex-shrink: 0; }
-        .service-list-item-info { flex-grow: 1; min-width: 0; }
-        .service-list-item-info p { margin: 0; font-weight: 600; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .service-list-item-actions { display: flex; gap: 0.5rem; flex-shrink: 0; }
-        .action-btn { background: none; border: none; cursor: pointer; font-size: 1.1rem; padding: 0.5rem; color: var(--text-light); transition: all 0.2s ease; }
-        .action-btn.edit:hover { color: var(--primary-color); transform: scale(1.2); }
-        .action-btn.delete:hover { color: var(--error-color); transform: scale(1.2); }
-        .profile-photo-square { width: 100px; height: 100px; object-fit: cover; border-radius: var(--border-radius); border: 4px solid white; box-shadow: var(--shadow-lg); }
-        .account-card-item { display: flex; justify-content: space-between; align-items: center; padding: 0.5rem 0; }
-        .account-card-item span:first-child { font-weight: 600; color: var(--text-light); }
-        .account-card-item span.plan { font-weight: bold; text-transform: capitalize; color: var(--primary-color); }
-        #logout-btn { margin-top: 1rem; border: 2px solid var(--error-color); color: var(--error-color); background-color: transparent; }
-        #logout-btn:hover { background-color: var(--error-color); color: white; }
-        #edit-profile-form { display: none; }
-        .modal { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.7); display: flex; justify-content: center; align-items: center; z-index: 2000; opacity: 0; visibility: hidden; }
-        .modal.active { opacity: 1; visibility: visible; }
-        .modal-content { background: var(--card-bg); padding: 2rem; border-radius: var(--border-radius); max-width: 500px; width: 90%; }
-        .btn { width: 100%; padding: 14px 28px; font-size: 1rem; font-weight: 700; text-align: center; border-radius: var(--border-radius); border: none; cursor: pointer; }
-        .btn-primary { background: var(--primary-color); color: white; }
-        .btn-secondary { background-color: var(--bg-color); color: var(--text-dark); border: 2px solid var(--border-color); }
-        .btn.loading { position: relative; color: transparent !important; }
-        .btn.loading::after { content: ''; position: absolute; width: 20px; height: 20px; top: 50%; left: 50%; margin-top: -10px; margin-left: -10px; border: 3px solid rgba(255, 255, 255, 0.5); border-top-color: white; border-radius: 50%; animation: spin 1s linear infinite; }
-        @keyframes spin { to { transform: rotate(360deg); } }
-        .form-group { margin-bottom: 1.25rem; }
-        .form-group label { font-weight: 600; display: block; margin-bottom: 0.5rem; }
-        .form-group input, .form-group textarea { width: 100%; padding: 14px 16px; font-size: 1rem; border: 2px solid var(--border-color); border-radius: var(--border-radius); box-sizing: border-box; }
-        .loading-spinner { display: flex; justify-content: center; padding: 4rem; }
-        .spinner { width: 50px; height: 50px; border: 5px solid var(--border-color); border-top-color: var(--primary-color); border-radius: 50%; animation: spin 1s linear infinite; }
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 15px;
+        box-sizing: border-box;
+    }
 
-        /* === RESPONSIVE FIXES === */
-        * {
-          max-width: 100%;
-          box-sizing: border-box;
-        }
+    .page-container {
+        padding-top: 80px;
+        padding-bottom: 40px;
+    }
 
-        img {
-          max-width: 100%;
-          height: auto;
-          display: block;
-        }
+    h1, h2, h3, h4 {
+        font-weight: 800;
+        margin: 0 0 1.5rem 0;
+    }
 
-        .service-list-item-info p {
-          white-space: normal;
-          text-overflow: ellipsis;
-          overflow: hidden;
-        }
+    a {
+        color: var(--primary-color);
+        text-decoration: none;
+    }
 
-        .service-list-item-actions {
-          flex-wrap: wrap;
-        }
+    /* --- UNIFIED HEADER --- */
+    .sticky-header { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background-color: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); box-shadow: 0 2px 5px rgba(0,0,0,0.08); }
+    .header-top-bar { display: flex; align-items: center; padding: 0 15px; height: 55px; max-width: 1200px; margin: 0 auto; }
+    .hamburger-menu { font-size: 22px; background: none; border: none; cursor: pointer; color: var(--text-dark); padding-right: 15px; }
+    .site-title { text-decoration: none; color: var(--text-dark); font-size: 1.4em; font-weight: bold; }
+    .site-title span { color: var(--accent-color); }
+    .header-spacer { flex-grow: 1; }
+    .header-icons { display: flex; align-items: center; gap: 18px; }
+    .mobile-nav { position: fixed; top: 0; left: -280px; width: 280px; height: 100%; background-color: #fff; z-index: 1100; transition: left 0.4s ease; display: flex; flex-direction: column; }
+    .mobile-nav.active { left: 0; }
+    .mobile-nav-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.6); z-index: 1090; opacity: 0; visibility: hidden; }
+    .mobile-nav-overlay.active { opacity: 1; visibility: visible; }
+    .mobile-nav-header { padding: 15px 20px; border-bottom: 1px solid var(--border-color); font-size: 1.2em; font-weight: bold; }
+    .mobile-nav-links { flex-grow: 1; overflow-y: auto; }
+    .mobile-nav a { display: flex; align-items: center; padding: 16px 20px; color: var(--text-dark); text-decoration: none; border-bottom: 1px solid #f0f0f0; }
+    .mobile-nav a i { margin-right: 15px; font-size: 18px; color: var(--primary-color); width: 20px; text-align: center; }
+    .mobile-nav-footer { padding: 15px; background-color: #f4f7f6; }
+    .mobile-nav .post-button { background-color: #6c757d; color: white; font-weight: bold; border-radius: 25px; text-align: center; display: block; padding: 12px; margin: 10px; text-decoration: none; }
 
-        .dashboard-card {
-          width: 100%;
-          max-width: 100%;
-        }
+    /* --- UNIFIED FOOTER --- */
+    footer { background-color: var(--text-dark); color: white; padding: 40px 15px 20px; text-align: center; margin-top: 30px; }
+    .footer-logo { font-size: 1.8em; font-weight: bold; margin-bottom: 10px; }
+    .footer-logo span { color: var(--accent-color); }
+    .footer-tagline { color: var(--text-light); font-size: 0.95em; margin-bottom: 25px; }
+    .footer-socials { margin-bottom: 25px; }
+    .footer-socials a { color: white; font-size: 22px; margin: 0 12px; }
+    .footer-links { margin-bottom: 25px; }
+    .footer-links a { color: #bdc3c7; margin: 0 10px; font-size: 0.9em; }
+    .footer-copyright { font-size: 0.8em; color: var(--text-light); }
 
-        .modal-content {
-          max-width: 95vw;
-          width: 100%;
-        }
+    /* --- PROFESSIONAL DASHBOARD STYLES --- */
+    .dashboard-hero { background: linear-gradient(135deg, var(--primary-color), #0056b3); color: white; padding: 2.5rem 2rem; border-radius: var(--border-radius); margin-bottom: 2rem; box-shadow: var(--shadow-lg); }
+    .dashboard-hero h1 { margin: 0; font-size: 2rem; }
+    .dashboard-hero p { margin: 0.5rem 0 1.5rem; opacity: 0.9; }
+    .dashboard-grid { display: grid; grid-template-columns: 1fr; gap: 2rem; }
+    @media (min-width: 992px) { .dashboard-grid { grid-template-columns: minmax(0, 2fr) minmax(0, 1fr); } }
+    .dashboard-card { background-color: var(--card-bg); padding: 2rem; border-radius: var(--border-radius); box-shadow: var(--shadow); }
+    .dashboard-card h2 { font-size: 1.5rem; padding-bottom: 1rem; border-bottom: 2px solid var(--primary-color); margin-bottom: 1.5rem; }
+    .service-list-item { display: flex; align-items: center; gap: 1rem; padding: 1rem; background-color: var(--bg-color); border-radius: 8px; margin-bottom: 1rem; }
+    .service-list-item img { width: 60px; height: 60px; object-fit: cover; border-radius: 8px; flex-shrink: 0; }
+    .service-list-item-info { flex-grow: 1; min-width: 0; }
+    .service-list-item-info p { margin: 0; font-weight: 600; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+    .service-list-item-actions { display: flex; gap: 0.5rem; flex-shrink: 0; }
+    .action-btn { background: none; border: none; cursor: pointer; font-size: 1.1rem; padding: 0.5rem; color: var(--text-light); transition: all 0.2s ease; }
+    .action-btn.edit:hover { color: var(--primary-color); transform: scale(1.2); }
+    .action-btn.delete:hover { color: var(--error-color); transform: scale(1.2); }
+    .profile-photo-square { width: 100px; height: 100px; object-fit: cover; border-radius: var(--border-radius); border: 4px solid white; box-shadow: var(--shadow-lg); }
+    .account-card-item { display: flex; justify-content: space-between; align-items: center; padding: 0.5rem 0; }
+    .account-card-item span:first-child { font-weight: 600; color: var(--text-light); }
+    .account-card-item span.plan { font-weight: bold; text-transform: capitalize; color: var(--primary-color); }
+    #logout-btn { margin-top: 1rem; border: 2px solid var(--error-color); color: var(--error-color); background-color: transparent; }
+    #logout-btn:hover { background-color: var(--error-color); color: white; }
+    #edit-profile-form { display: none; }
+    .modal { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.7); display: flex; justify-content: center; align-items: center; z-index: 2000; opacity: 0; visibility: hidden; }
+    .modal.active { opacity: 1; visibility: visible; }
+    .modal-content { background: var(--card-bg); padding: 2rem; border-radius: var(--border-radius); max-width: 500px; width: 90%; }
+    .btn { width: 100%; padding: 14px 28px; font-size: 1rem; font-weight: 700; text-align: center; border-radius: var(--border-radius); border: none; cursor: pointer; }
+    .btn-primary { background: var(--primary-color); color: white; }
+    .btn-secondary { background-color: var(--bg-color); color: var(--text-dark); border: 2px solid var(--border-color); }
+    .btn.loading { position: relative; color: transparent !important; }
+    .btn.loading::after { content: ''; position: absolute; width: 20px; height: 20px; top: 50%; left: 50%; margin-top: -10px; margin-left: -10px; border: 3px solid rgba(255, 255, 255, 0.5); border-top-color: white; border-radius: 50%; animation: spin 1s linear infinite; }
+    @keyframes spin { to { transform: rotate(360deg); } }
+    .form-group { margin-bottom: 1.25rem; }
+    .form-group label { font-weight: 600; display: block; margin-bottom: 0.5rem; }
+    .form-group input, .form-group textarea { width: 100%; padding: 14px 16px; font-size: 1rem; border: 2px solid var(--border-color); border-radius: var(--border-radius); box-sizing: border-box; }
+    .loading-spinner { display: flex; justify-content: center; padding: 4rem; }
+    .spinner { width: 50px; height: 50px; border: 5px solid var(--border-color); border-top-color: var(--primary-color); border-radius: 50%; animation: spin 1s linear infinite; }
+
+    /* === RESPONSIVE FIXES === */
+    * {
+      max-width: 100%;
+      box-sizing: border-box;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .service-list-item-info p {
+      white-space: normal;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
+    .service-list-item-actions {
+      flex-wrap: wrap;
+    }
+
+    .dashboard-card {
+      width: 100%;
+      max-width: 100%;
+    }
+
+    .modal-content {
+      max-width: 95vw;
+      width: 100%;
+    }
+
     
     </style>
 </head>
