--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Login - Kabale Online</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="display: flex; align-items: center; justify-content: center; min-height: 100vh;">
+<body style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh;">
     <main style="width: 100%; max-width: 420px;" class="dashboard-card">
         <div style="text-align: center; margin-bottom: 2rem;">
             <a href="index.html" class="site-title">Kabale <span>Online</span></a>
@@ -24,6 +24,12 @@
         </form>
         <p style="text-align: center; color: var(--text-light); margin-top: 1.5rem;">Don't have an account? <a href="signup.html" style="font-weight: bold;">Sign Up</a></p>
     </main>
+
+    <!-- === NEW "BACK TO HOME" BUTTON ADDED HERE === -->
+    <div style="margin-top: 2rem; text-align: center;">
+        <a href="index.html" style="color: var(--text-light); text-decoration: none; font-weight: 600;">&larr; Back to Home Page</a>
+    </div>
+
     <script type="module" src="js/auth.js"></script>
 </body>
 </html>
